PhD Proposal - monday 03 late eve

--- a/PhDProposal 01/Chp1-Intro/Intro.tex
+++ b/PhDProposal 01/Chp1-Intro/Intro.tex
@@ -38,31 +38,45 @@ In the following I will try to clarify the complementary terms of phytoplankton 
 
 The trait-based approach to phytoplankton ecology has been growing in popularity. Part of the fascination evoked by this term stems from its origin in evolutionarily theory. Over the last three decades, it has been adopted by ecologists trying to understand communities and ecosystems. In this new context, the concept of traits has been stretched far beyond its original meaning, which can lead to some confusion surrounding the scope of trait-based methods \citep{Violle2007c}. In the simplest definition, a trait is a surrogate of organismal performance. In the ecological context this has been expanded to surrogates for the performance of populations, communities and entire ecosystems. This can include ecophysiological traits, life-history traits, demographic traits or response and effect traits of ecosystems (see Figure \ref{PhytoTraits} for a selection of phytoplankton traits). Theoretically, any property of an organism or ecosystem could be defined as a trait, but ideally a trait should be functional. Functional traits are defined by \cite{Violle2007c} as "morpho-, physio- or phenological traits which impact fitness indirectly via their effects on growth, reproduction and survival". An important facet of the trait-based approach is to describe organismal function via trade-offs between traits. For example when competing for multiple nutrients, phytoplankton species are thought to be constrained by trade-offs in their competitive ability for one over another resource \citep{Tilman1990}. 
 
-Phytoplankton are extremely diverse and the trait based approach lends itself to generalizations, as traits and ecological trade-offs can be defined and explored irrespective of species or taxa boundaries \citep{McGill2006}. However, depending on study and hypotheses to be tested, it can be very helpful to structure the diversity of organisms into distinct groups. Major taxonomic groups of phytoplankton can be classified into groups, based on their ecological or biogeochemical roles within the ecosystem \citep{Iglesias-Rodriguez2002,Flynn2015}. The concept of functional groups is not in contrast to a trait-based ecology of phytoplankton, but can be complementary to it. By broadly sampling relevant traits across phytoplankton groups and species, functional types can be defined by functional traits and trade-offs and therefore extend the trait-based approach by another level of organization \citep{Litchman2007d}. An early example of such an approach is the work of Ramón Margalef. He used observations of important traits, such as sinking rates and nutrient utilization to build the concept called "Margalef's mandala" to organize phytoplankton functional types (PFTs) on a spectrum of nutrient availability versus turbulence \citep{Margalef1978}. 
+Phytoplankton are extremely diverse and the trait based approach lends itself to generalizations, as traits and ecological trade-offs can be defined and explored irrespective of species or taxa boundaries \citep{McGill2006}. However, depending on the study and hypotheses to be tested, it can be very helpful to structure the diversity of organisms into distinct groups. Major taxonomic groups of phytoplankton can be classified based on their ecological or biogeochemical roles within the ecosystem \citep{Iglesias-Rodriguez2002,Flynn2015}. The concept of functional groups is not in contrast to a trait-based ecology of phytoplankton, but can be complementary to it. By broadly sampling relevant traits across phytoplankton groups and species, functional types can be defined by functional traits and trade-offs and therefore extend the trait-based approach by another level of organization \citep{Litchman2007d}. An early example is the work of Ramón Margalef. Margalef used observations of important traits, such as sinking rates and nutrient utilization to build the concept called "Margalef's mandala" to organize phytoplankton functional types (PFTs) on a spectrum of nutrient availability versus turbulence \citep{Margalef1978}. 
 
-The terms functional group and functional type are used interchangeably, with functional groups more often referring to the grouping of species and the functional type describing the group as a whole, often as implemented in computational models. In fact, the simplification of the phytoplankton community into functional types has been widely used for the design and interpretation of computational models that try to recreate or make predictions about the biogeochemical cycling, biogeographic distribution, productivity and other ecosystem functions of phytoplankton (XGregg 2003, Anderson 2005 and LeQuere 2005X). Biogeochemically defined functional types are most often used, as these functional traits can usually be well defined within an ecosystem model. Typical examples of such functional groups are silicifers, which broadly correspond the phylogenetic group of diatoms, and calcifiers, which are usually represented by coccolithophores. Such functional types are always simplifications of the natural pyhtoplankton diversity. Silicoflagellates create silicified skeletons like diatoms, but are often not explicitly included because they rarely dominate modern phytoplankton assemblages. The choice of which functional groups to include in a model can also be driven by biogeography or analytical considerations concerning the measurement instrumentation used for a particular study \citep{IrwinAndrewJ.Finkel2017b}. 
+The terms functional group and functional type are used interchangeably, with functional groups more often referring to the grouping of species and the functional type describing the group as a whole, often as implemented in computational models. In fact, the simplification of the phytoplankton community into functional types has been widely used for the design and interpretation of computational models that try to recreate or make predictions about the biogeochemical cycling, biogeographic distribution, productivity and other ecosystem functions of phytoplankton \citep{Gregg2003,LeQuere2005}. Biogeochemically defined functional types are most often used, as these functional traits can usually be well defined within an ecosystem model. Typical examples of such functional groups are silicifers, which broadly correspond the phylogenetic group of diatoms, and calcifiers, which are usually represented by coccolithophores. Such functional types are always simplifications of the natural pyhtoplankton diversity. Silicoflagellates create silicified skeletons like diatoms, but are often not explicitly included because they rarely dominate modern phytoplankton assemblages. The choice of which functional groups to include in a model can also be driven by biogeography or analytical considerations concerning the measurement instrumentation used for a particular study \citep{IrwinAndrewJ.Finkel2017b}. 
 
 Perhaps small paragraph about functional diversity here?
 It is important to keep in mind that PFTs are often composed of many species with a possibly large variance in trait values. Recent research is trying to understand the effects of diversity within functional types and within species \citep{Violle2012,Violle2017a,DesRoches2018}.
 
+
+
+
 \section{Modeling phytoplankton communities}
-Given the complexity of the ocean ecosystem, it is necessary to aggregate our knowledge of the many smaller parts into comprehensive ecological models in order to test mechanistic hypotheses and understand the full-scale implications. 
+Given the complexity of the ocean ecosystem, it is necessary to aggregate our knowledge of the many smaller parts into comprehensive ecological models in order to test mechanistic hypotheses and investigate their full-scale implications. 
 
-Computational models of phytoplankton growth have been developed since the 1970s and have greatly increased in sophistication and complexity since then, co-evolving with the rise in computational resources. Ecosystem modelling started with simple box-model descriptions of a few trophic levels. These were the nutrient-phytoplankton-zooplankton (NPZ) and nutrient-phytoplankton-zooplankton-detritus (NPZD) models, which succeeded in reproducing the basic bloom dynamics observed in the temperate ocean (Evans 1988, Fasham et al. 1990). However, in their generalistic approach, these models unavoidably limit the characterization of a diverse phytoplankton community (Bruggeman 2009). To make up for this shortcoming, in the following two decades, these models were expanded to more complex plankton functional type (PFT) models (Le Quere et al. 2005). 
+Computational models of phytoplankton growth have been developed since the 1940s and have greatly increased in sophistication and complexity since then, co-evolving with the rise in computational resources \citep{Gentleman2002a}. Phytoplankton modelling started with formulations based on the Lotka-Volterra equations of predator-prey dynamics \citep{Fleming1939}. From these relatively simple descriptions of the populations, models evolved to describe the oceanic physical environment in ecosystem models including multiple trophic levels. Originally developed by John Steele with a model ocean split in two layers, the nutrient-phytoplankton-zooplankton (NPZ) and nutrient-phytoplankton-zooplankton-detritus (NPZD) models succeeded in reproducing the basic bloom dynamics observed in the temperate ocean \citep{Steele1958,Evans1988,Fasham1990a}. Further developments have been in more exact physiological descriptions of phytoplankton based in cellular metabolism and energy allocation \citep{Geider1997} and both simple and more complicated ecosystem formulations driven by local and global 3D circulation models \citep{Lacroix2007, Hirata2013}.
 
-For every group of species that fulfill a distinct ecosystem function, a new set of parameters was added, complicating the model structure and massively prolonging calculations. This somewhat intuitive approach of having every functional group represented in a model, however, did create problems. First and foremost, this is the lack and inherent uncertainty of data from field and culture experiments to constrain functional types. 
+However, in their simplified approach, these models unavoidably limit the characterization of a diverse phytoplankton community \citep{Bruggeman2009}. These plankton ecosystem models are typically highly aggregated, such that a single variable determines the response of a diverse assemblage of phytoplankton species \citep{Franks2009}. Implementing a meaningful treatment of biodiversity in ecological models is a key challenge in the field of phytoplankton modeling \citep{Queiros2015}. The most apparent way of implementing this within the framework of established NPZD models is to include multiple equations and state variables for different phytoplankton functional types \citep{LeQuere2005}. For every group that fulfills a distinct ecosystem function, a new set of parameters has to be added, which complicates the model structure and increases computational costs. This somewhat intuitive approach, however, does lead to problems. First and foremost, this is the lack and inherent uncertainty of data from field and culture experiments to constrain functional types. This again leads to the difficulty of validating the model output in light of insufficient information, leading multiple authors to criticize the PFT modeling approach as attempting to "run before we can walk" particularly when used for extrapolating into the future \citep{Anderson2005,Shimoda2016}. 
 
-This again leads to the difficulty of validating the model output in light of insufficient information (Shimoda et al. 2016 ).Trait-based modeling, on the other side, tries to circumvent the problem of biodiversity (i.e. complexity) in natural systems with a radically different approach. The interactions of phytoplankton with their environment are based on multiple traits which characterize generalized physiological properties like nutrient affinities or motility. Ideally, these traits can be directly measured and are independent of species and therefore they can be directly related to the properties of the organisms function within the ecosystem, such as nutrient affinity for example deally, these traits can be directly measured and are independent of species and therefore they can be directly related to the properties of the organisms function within the ecosystem, such as nutrient affinity for example (Litchman and Klausmeier 2008).  
+The current scientific discussion can seem intimidating to an early career scientist, as both the most obvious future directions of ecosystem model design as exemplified by PFT models, as well as the very foundation of traditional NPZD models has come under scrutiny. Nowhere is this more apparent as with the formulation of nutrient uptake dynamics, which is traditionally defined by Monod kinetics that are based on the equations for Michealis-Menten enzyme kinetics. (Monod reference here)
+
+ALSO: current modeling paradigms are discussed quite critically in the literature, in particular the Monod kinetics and also the lack of any adaptive mechanisms in these model \citep{Smith2014}
+A bit earlier, but similar direction: \citep{Flynn2010}
+and more recent, but focused on Monod: \citep{Hellweger2017a}
+
+However, there are also examples of modeling approaches that show a way forward. To name an alternative to the modeling paradigm discussed so far, there is individual based modeling (IBM). In IBMS the phytoplankton are represented as individual agents, allowing for a diverse and spatially interactive phytoplankton community \citep{Hellweger2009}.
+
+And the aggregate moment based models such as PhytoSFDM! (TRAIT-BASED-APPROACH)
+
+And the DARWIN model, including Ben Wards adaptation, including multiple PFTS with a trait-based parametrisation for each functional type based on the organismal size range! (TRAIT-BASED-APPROACH)
 
 
 A simple example of a trait-based description of phytoplankton succession is scaling the maximal nutrient acquisition rate and the respective affinity with cell size. A trade-off would emerge between different size classes, allowing for a modeled succession along gradients of nutrient depletion. One example of a very similar approach is the PhytoSFDM model developed by Acevedo-Trejos and colleagues (Acevedo‐Trejos et al. 2013, Acevedo-Trejos et al. 2015). In their approach, the trait-based modelling of phytoplankton is even further simplified, by describing an entire community as a size- distribution with a mean value and a variance, instead of modeling all the different size classes explicitly. This moment-based structure further simplifies the mathematical basis of the model, and leads to much faster processing times and less uncertainty in parameter estimation.
 
 
 
-"quite a few publications using models go too far in their extrapolations, whilst the general discussion still strongly revolves around meaningful model structures.. but no consensus is anywhere to be seen!
 "need to identify the basic uncertainties and see if there is a way to discuss them scientifically
 "Michaelis Menten kinetics are really outdated.. and i suppose using them in a trait-based modelling approach is questionable just the same
-"plankton ecosystems are typically highly aggregated, a single variable gives the response of an incredibly diverse assemblage of phytoplankton species (P. Franks, 2009)
+
+
+
 
 
 XXX
