--- a/PhDProposal 01/Chp3-Further/Further.tex
+++ b/PhDProposal 01/Chp3-Further/Further.tex
@@ -6,6 +6,8 @@
 
  HERE I should cite the Tilman and Ptacnik Papers that Esteban recommended, talk about how Biodiversity influences ressource use efficiency
  
+ALSO BDEF MODEL BY LOREAU: \citep{Loreau1998b}
+ 
  And then say how the model I am building is actually very well equipped to deal with this kind of 
 
 
