--- a/PhDProposal 01/proposal.bib
+++ b/PhDProposal 01/proposal.bib
@@ -1,3 +1,50 @@
+@article{Acevedo-Trejos2018,
+abstract = {Trait diversity, a key component of biodiversity, mediates many essential ecosystem functions and services. However, the mechanisms behind such relationships at large spatial scales are not fully understood. Here we adopt the functional biogeography approach to investigate how the size composition of phytoplankton communities relates to primary production and export production along a broad latitudinal gradient. Using in situ phytoplankton size distribution data and a trait-based model, we find an increase in the average phytoplankton size, size diversity, primary production and export when moving from low to high latitudes. Our analysis indicates that the interplay between spatio-temporal heterogeneities in environmental conditions and a trade-off between the high affinity for nutrients of smaller cells and the ability to avoid predation by larger cells are the main mechanisms driving the observed patterns. Our results also suggest that variations in size diversity alone do not directly lead to changes in primary production and export. The trade-off thus introduces a feedback that influences the relationship between size diversity and ecosystem functions. These findings support the importance of environmentally mediated trade-offs as crucial mechanisms shaping biodiversity and ecosystem function relationships at large spatial scales.},
+annote = {AGO: This is an application of Esteban's model (above )for understanding the drivers of broad biogeographical patterns of phytoplankton size diversity, specifically targeting the Atlantic Meridional Transect region. Diversity here is sustained with immigration.},
+author = {Acevedo-Trejos, Esteban and Mara{\~{n}}{\'{o}}n, Emilio and Merico, Agostino},
+doi = {10.1098/rspb.2018.0621},
+file = {:Users/bpo/Library/Application Support/Mendeley Desktop/Downloaded/Acevedo-Trejos, Mara{\~{n}}{\'{o}}n, Merico - 2018 - Phytoplankton size diversity and ecosystem function relationships across oceanic regions.pdf:pdf},
+isbn = {0000000315722},
+issn = {14712954},
+journal = {Proceedings of the Royal Society B: Biological Sciences},
+keywords = {0D-Models,Biodiversity ecosystem function relationship,Environmentally mediated trade-off,Functional biogeography,Latitudinal gradient,Macroecology,Trait-based ecology},
+mendeley-groups = {Ago,DAAD app},
+mendeley-tags = {0D-Models},
+month = {may},
+number = {1879},
+pages = {20180621},
+pmid = {29794050},
+publisher = {The Royal Society},
+title = {{Phytoplankton size diversity and ecosystem function relationships across oceanic regions}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/29794050 http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=PMC5998115},
+volume = {285},
+year = {2018}
+}
+
+
+@article{Merico2009,
+abstract = {Although predator-prey cycles can be easily predicted with mathematical models it is only since recently that oscillations observed in a chemostat predator-prey (rotifer-algal) experiment offer an interesting workbench for testing model soundness. These new observations have highlighted the limitations of the conventional modelling approach in correctly reproducing some unexpected characteristics of the cycles. Simulations are improved when changes in algal community structure, resulting from natural selection operating on an assemblage of algal clones differing in competitive ability and defence against rotifer predation, is considered in multi-prey models. This approach, however, leads to extra complexity in terms of state variables and parameters. We show here that multi-prey models with one predator can be effectively approximated with a simpler (only a few differential equations) model derived in the context of adaptive dynamics and obtained with a moment-based approximation. The moment-based approximation has been already discussed in the literature but mostly in a theoretical context, therefore we focus on the strength of this approach in downscaling model complexity by relating it to the chemostat predator-prey experiment. Being based on mechanistic concepts, our modelling framework can be applied to any community of competing species for which a trade-off between competitive ability and resistance to predators can be appropriately defined. We suggest that this approach can be of great benefit for reducing complexity in biogeochemical modelling studies at the basin or global ocean scale. {\textcopyright} 2009 Elsevier B.V. All rights reserved.},
+annote = {AGO: Me again! This is a demonstration of how fully resolved PFTs models can be mathematically ‘simplified' and approximated to capture aggregate community properties such as total phytoplankton biomass, mean trait, and trait variance.},
+author = {Merico, Agostino and Bruggeman, Jorn and Wirtz, Kai},
+doi = {10.1016/j.ecolmodel.2009.05.005},
+file = {:Users/bpo/Library/Application Support/Mendeley Desktop/Downloaded/Merico, Bruggeman, Wirtz - 2009 - A trait-based approach for downscaling complexity in plankton ecosystem models.pdf:pdf},
+isbn = {0304-3800},
+issn = {03043800},
+journal = {Ecological Modelling},
+keywords = {0D-Models,Adaptation,Community ecology,Complexity reduction,ECEM 07,Moment-based approximation,Predator-prey cycles,Trade-off,Trait-based modelling},
+mendeley-groups = {Ago,PhD Proposal BibTex/cited},
+mendeley-tags = {0D-Models},
+month = {nov},
+number = {21},
+pages = {3001--3010},
+publisher = {Elsevier},
+title = {{A trait-based approach for downscaling complexity in plankton ecosystem models}},
+url = {https://www.sciencedirect.com/science/article/pii/S0304380009003275},
+volume = {220},
+year = {2009}
+}
+
+
 @article{Loreau1998b,
 annote = {some rly interesting stuff towards the end},
 author = {Loreau, Michel},
